# simple-tokenizer

./: LICENSE  README.md  setup.cfg  setup.py
simpletokenizer/: __init__.py  tokenization.py
