[metadata]
name = simpletokenizer
version = 0.1
author = Ali Safaya
author_email = alisafaya@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tdd-ai/simple-tokenizer/
download_url = https://github.com/tdd-ai/simple-tokenizer/archive/v0.1.tar.gz
classifiers =
    Topic :: Software Development
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6